--- a/MyApp/app/src/main/res/layout/activity_main.xml
+++ b/MyApp/app/src/main/res/layout/activity_main.xml
@@ -63,13 +63,13 @@
             android:padding="10dp">
 
             <Button
-                android:id="@+id/city"
+                android:id="@+id/movie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="10"
-                android:text="@string/city" />
+                android:text="Movie" />
 
             <Button
                 android:id="@+id/state"
