--- a/MyApp/app/src/main/res/layout/activity_main.xml
+++ b/MyApp/app/src/main/res/layout/activity_main.xml
@@ -72,13 +72,13 @@
                 android:text="Movie" />
 
             <Button
-                android:id="@+id/state"
+                android:id="@+id/cam"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="50dp"
                 android:layout_weight="10"
-                android:text="@string/state" />
+                android:text="@string/traffic_camera" />
         </TableRow>
 
         <TableRow
