--- a/MyApp/app/src/main/res/layout/content_location.xml
+++ b/MyApp/app/src/main/res/layout/content_location.xml
@@ -6,8 +6,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <fragment
-        android:id="@+id/nav_host_fragment_content_traffic_camera"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/map"
+        class = "com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
@@ -15,5 +16,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph4" />
+        app:navGraph="@navigation/nav_graph5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
