Corrected the way the user is notified of network status

--- a/MyApp/app/src/main/res/layout/activity_traffic_camera.xml
+++ b/MyApp/app/src/main/res/layout/activity_traffic_camera.xml
@@ -20,7 +20,10 @@
              android:divider="#000"
              android:dividerHeight="1dp"
              android:footerDividersEnabled="false"
-             android:headerDividersEnabled="false" />
+             android:headerDividersEnabled="false" >
+
+
+         </ListView>
 
     </LinearLayout>
 
