--- a/MyApp/app/src/main/res/layout/activity_firebase.xml
+++ b/MyApp/app/src/main/res/layout/activity_firebase.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <ListView
         android:id="@+id/userList"
         android:layout_width="match_parent"
@@ -11,7 +12,10 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginRight="10dp"
+        android:minHeight="48dp"
         android:paddingTop="10dp" />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
