--- a/MyApp/app/src/main/res/layout/activity_main.xml
+++ b/MyApp/app/src/main/res/layout/activity_main.xml
@@ -90,9 +90,9 @@
 
             <Button
                 android:id="@+id/location"
-                android:layout_width="wrap_content"
+                android:layout_width="105dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="48dp"
                 android:layout_weight="5"
                 android:text="@string/location"
                 android:textColor="#00695C" />
