--- a/MyApp/app/src/main/res/navigation/nav_graph5.xml
+++ b/MyApp/app/src/main/res/navigation/nav_graph5.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/First4Fragment"
-        android:name="JBiolette.AD340.First4Fragment"
+        android:name="com.JBiolette.AD340.First4Fragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first4">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/Second4Fragment"
-        android:name="JBiolette.AD340.Second4Fragment"
+        android:name="com.JBiolette.AD340.Second4Fragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second4">
 
