--- a/MyApp/app/src/main/res/navigation/nav_host_fragment_content_movies.xml
+++ b/MyApp/app/src/main/res/navigation/nav_host_fragment_content_movies.xml
@@ -6,13 +6,13 @@
     app:startDestination="@id/mainActivity">
     <activity
         android:id="@+id/mainActivity"
-        android:name="JBiolette.AD340.MainActivity"
+        android:name="com.JBiolette.AD340.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
 
     <activity
         android:id="@+id/movies"
-        android:name="JBiolette.AD340.Movies"
+        android:name="com.JBiolette.AD340.Movies"
         android:label="activity_movies"
         tools:layout="@layout/activity_movies" />
 
